force-app/main/default/objects/I_ST_Interaction__c/I_ST_Interaction__c.object-meta.xml
<CustomObject>
    <description>For Lead Forms, tracks interactions(forms) filled out by the Lead (domestic)</description>
    <label>Interaction</label>
    <nameField>
        <displayFormat>INT-{DD}{MM}{YY}-{0000}</displayFormat>
        <label>Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>