force-app/main/default/objects/I_ST_Interaction__c/fields/I_RM_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation__c</fullName>
    <description>Facilitate relationship with the Affiliation object</description>
    <label>Affiliation</label>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>