force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Aspire_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Aspire_Status__c</fullName>
    <description>LTU360-16 - To capture the Aspire status from Aspire Keep In Touch form</description>
    <label>Aspire Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>