force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Campus_Interest__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Campus_Interest__c</fullName>
    <description>Added for LTU360-16, To track Campus Interest of domestic Lead Forms.</description>
    <label>Campus Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>