force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added for LTU360-16, To track Associated Contact of domestic Lead Forms.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>