force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Email__c</fullName>
    <description>Added for LTU360-16, To track  Email of domestic Lead Forms.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>