force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Enquirer_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Enquirer_Type__c</fullName>
    <description>Added for LTU360-16, To track What best describes you? of domestic Lead Forms.</description>
    <label>What best describes you?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>