force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_FirstName__c.field-meta.xml
<CustomField>
    <fullName>I_ST_FirstName__c</fullName>
    <description>Added for LTU360-16, To track First Name of domestic Lead Forms.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>