force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Last_Name__c</fullName>
    <description>Added for LTU360-16, To track Last Name of domestic Lead Forms.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>