force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Mobile__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Mobile__c</fullName>
    <description>Added for LTU360-16, To track Mobile of domestic Lead Forms.</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>