force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Postcode__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Postcode__c</fullName>
    <description>Added for LTU360-16, To track Postcode of domestic Lead Forms.</description>
    <label>Post Code (Home)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>