force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Secondary_School__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Secondary_School__c</fullName>
    <description>Added for LTU360-16, To track Secondary School of domestic Lead Forms.</description>
    <label>Secondary School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>