force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Source_Category__c</fullName>
    <description>Added for LTU360-16, To track Source Category of domestic Lead Forms.</description>
    <label>Source Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>