force-app/main/default/objects/I_ST_Interaction__c/fields/I_ST_Winner__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for LTU360-16, To track winner of the Stay Connected and Win</description>
    <label>Winner</label>
    <type>Checkbox</type>
</CustomField>