force-app/main/default/objects/I_ST_Interaction__c/recordTypes/I_ST_Lead_Interaction.recordType-meta.xml
<RecordType>
    <fullName>I_ST_Lead_Interaction</fullName>
    <active>true</active>
    <label>Lead Interaction</label>
</RecordType>